--- a/_output.yml
+++ b/_output.yml
@@ -2,5 +2,4 @@ date: 2020
 header-includes: 
 - preamble.tex
 documentclass: ufpr[final,oneside,english,brazilian]
-output:
-  pdf_document: default
+output: pdf_document
